<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_day"
            android:icon="@drawable/ic_sun"
            android:title="@string/day_mode" />
        <item
            android:id="@+id/nav_night"
            android:icon="@drawable/ic_moon"
            android:title="@string/night_mode" />
    </group>

    <item android:title="@string/nav_more">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share" />
        </menu>
    </item>

</menu>